--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.8.6",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.8.0",
+    "@stripe/stripe-react-native": "^0.57.0",
     "@supabase/supabase-js": "^2.84.0",
     "expo": "~54.0.25",
     "expo-image-picker": "^17.0.8",
@@ -23,7 +24,8 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-url-polyfill": "^3.0.0"
+    "react-native-url-polyfill": "^3.0.0",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
