--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,8 @@ EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
 STRIPE_SECRET_KEY=sk_test_...
 STRIPE_CONNECT_CLIENT_ID=ca_...
 
+# Google Places
+EXPO_PUBLIC_GOOGLE_PLACES_API_KEY=your-google-places-api-key
+
 # Environment
 NODE_ENV=development
