--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "expo-image-picker": "^17.0.8",
     "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-google-places-autocomplete": "^2.6.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
