--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@stripe/stripe-react-native": "^0.57.0",
     "@supabase/supabase-js": "^2.84.0",
     "expo": "~54.0.25",
+    "expo-device": "~8.0.9",
     "expo-image-picker": "^17.0.8",
     "expo-location": "^19.0.7",
+    "expo-notifications": "~0.32.13",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
+    "lucide-react-native": "^0.555.0",
     "react": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-google-places-autocomplete": "^2.6.1",
