--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.84.0",
     "expo": "~54.0.25",
     "expo-device": "~8.0.9",
+    "expo-image-manipulator": "^55.0.9",
     "expo-image-picker": "^17.0.8",
     "expo-location": "^19.0.7",
     "expo-notifications": "~0.32.13",
